[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/MenuButton.gd" type="Script" id=1]

[sub_resource type="BoxShape3D" id=1]
extents = Vector3( 0.765007, 0.204286, 0.0472548 )

[sub_resource type="BoxMesh" id=2]

[sub_resource type="StandardMaterial3D" id=3]
albedo_color = Color( 0, 0.00784314, 0.537255, 1 )

[node name="MenuButton" type="Area3D" groups=["MenuObjects"]]
script = ExtResource( 1 )

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource( 1 )

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D( 0.758203, 0, 0, 0, 0.199661, 0, 0, 0, 0.0336959, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="ButtonText" type="Label3D" parent="."]
transform = Transform3D( 2.00915, 0, 0, 0, 2.00915, 0, 0, 0, 1, 0, 0, 0.0421672 )
text = "TEST"

[connection signal="mouse_entered" from="." to="." method="_on_MenuButton_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_MenuButton_mouse_exited"]
